# harness-engineering

./: .coderabbit.yaml  .env.example  .formatter.exs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  WORKFLOW.example.md  mix.exs  package.json  progress.json  pyproject.toml  tsconfig.json  typedoc.json
.github/ISSUE_TEMPLATE/: agent-slop.yaml  bug.yaml  config.yml  feature.yaml
.github/workflows/: ci.yml  harness-gc.yml  pr-review.yml
apps/cli/: package.json
apps/dashboard/: package.json
apps/server/: package.json
docs/: api-documentation-policy.md  api-documentation-report.md  architecture.md  elixir-port-notes.md  garbage-collection.md  golden-principles.md  implementation-defined.md  original-checkout-retirement.md  quality-grades.json  sandcastle-roadmap.md  symphony-build-plan.md  symphony-dogfood-runbook.md  symphony-ui-evidence.md
docs/specs/: README.md
rules/: architecture.md  testing-and-validation.md  workflow-contract.md  workspace-safety.md
scripts/: api-docs-report.ts  dogfood-linear-smoke.ts  lint-architecture.py  lint-github-workflows.py  lint-knowledge.py  lint.sh  playwright-ui-evidence-smoke.ts  pr-review.py  smoke-codex-app-server.sh  smoke-ui-evidence.ts  test-elixir.sh  test.sh  typecheck.sh  validate-workflow.sh
test/: candidate_selection_test.exs  codex_app_server_smoke_test.exs  codex_app_server_test.exs  test_helper.exs  workflow_config_test.exs  workspace_test.exs
test_support/: codex_app_server_fixture.exs  python_oracle.exs
tests/: test_agent.py  test_execution_primitives.py  test_execution_strategy.py  test_github_tracker.py  test_http_server.py  test_orchestrator.py  test_prompt.py  test_session_journal.py  test_workflow_config.py  test_workflow_templates.py  test_workspace.py
(+46 files in other folders)
